--- a/Task_3_v5/Views/Shared/_LoginPartial.cshtml
+++ b/Task_3_v5/Views/Shared/_LoginPartial.cshtml
@@ -1,10 +1,14 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using Task_3_v5.Areas.Identity.Data
+@using Microsoft.Extensions.Logging
+@using Task_3_v5.Areas.Identity.Pages.Account
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
+@inject ILogger<LoginModel> logger
 
 <ul class="navbar-nav">
+    <h1> @User.Identity.Name </h1>
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
